--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -9259,6 +9259,9 @@ header.header .top-links li .child-box ul li a.highlight {
   background-color: transparent;
   border-color: #fff;
   color: #fff;
+  display: inline-block;
+  padding-top: 9px;
+  cursor: pointer;
 }
 .pick-coffee .wrap-want-desk {
   padding-top: 37px;
@@ -9311,6 +9314,79 @@ header.header .top-links li .child-box ul li a.highlight {
   font-size: 36px;
   margin: -5px 0 0 10px;
   vertical-align: middle;
+}
+.pick-coffee .custom-date-select .dropdown-menu {
+  width: calc(100% - 20px) !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  color: #515252;
+  font-size: 16px;
+  font-weight: 400;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio {
+  margin-left: 10px;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio label {
+  cursor: pointer;
+  padding-left: 30px;
+  padding-top: 5px;
+  color: #999999;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 25px;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio label:after {
+  border-radius: 50%;
+  border-width: 1px;
+  border-color: #02b691;
+  border-style: solid;
+  content: "";
+  height: 22px;
+  width: 22px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio input[type=radio] {
+  width: 0;
+  height: 0;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio input[type=radio].css-checkbox:checked + label.css-label {
+  color: #02b691;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-radio input[type=radio].css-checkbox:checked + label.css-label:after {
+  background-image: url("../images/check1.png") !important;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-content {
+  margin-left: 45px;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-content .date-checkbox label {
+  padding-left: 30px;
+  color: #515252;
+  font-size: 16px;
+  font-weight: 400;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-content .date-checkbox label:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-width: 1px;
+  border-color: #999999;
+  border-style: solid;
+  width: 18px;
+  height: 18px;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-content .date-checkbox label:before {
+  display: none;
+}
+.pick-coffee .custom-date-select .dropdown-menu .custom-content .date-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
+  background-position: none !important;
+  background: url("../images/checked.png") no-repeat !important;
 }
 /* ---------------------------------------
     DISCOUNT BANNER
@@ -10019,33 +10095,33 @@ header.header .top-links li .child-box ul li a.highlight {
   background-position: none !important;
   background: url("../images/checked.png") no-repeat !important;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab {
   border: 1px solid #e0e0e0;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills {
   border-bottom: 1px solid #e0e0e0;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li {
   width: 20%;
   margin-left: 0 !important;
   background-color: #eeeeee;
 }
 @media (max-width: 530px) {
-  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li {
+  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li {
     height: 55px;
   }
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li.active {
   background-color: #02b691 !important;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active a {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li.active a {
   color: #ffffff;
   background-color: #02b691 !important;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active a:hover {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li.active a:hover {
   background-color: #02b691 !important;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li a {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li a {
   background-color: #eeeeee;
   border-radius: 0;
   color: #000000;
@@ -10053,25 +10129,25 @@ header.header .top-links li .child-box ul li a.highlight {
   font-weight: 400;
 }
 @media (max-width: 530px) {
-  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li a {
+  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .nav-pills li a {
     padding-left: 5px !important;
     font-size: 12px;
   }
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .tab-content {
   border-color: #e0e0e0;
   background-color: #eeeeee;
   padding: 5px 15px;
   max-height: 200px;
   overflow-y: auto;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .tab-content .topping-checkbox label {
   padding-left: 30px;
   color: #515252;
   font-size: 14px;
   font-weight: 400;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label:after {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .tab-content .topping-checkbox label:after {
   border-width: 2px;
   border-color: #bbbbbb;
   border-style: solid;
@@ -10083,10 +10159,10 @@ header.header .top-links li .child-box ul li a.highlight {
   transform: translateY(-50%);
   width: 22px;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label:before {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .tab-content .topping-checkbox label:before {
   display: none;
 }
-.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content .add-topping-tab .tab-content .topping-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
   background-position: none !important;
   background: url("../images/checked.png") no-repeat !important;
 }
