--- a/pccc/assets/styles/styles.css
+++ b/pccc/assets/styles/styles.css
@@ -7111,92 +7111,6 @@ label.css-label:before {
 /* ---------------------------------------
     SELECT2
 ----------------------------------------- */
-.select2-container--default.select2-container--open .select2-dropdown {
-  background-color: #fff;
-  overflow: hidden;
-}
-.select2-container--default.select2-container--open .select2-dropdown.home-select2 {
-  background-color: #262626;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
-  border-color: #fff;
-}
-.select2-container--default.select2-container--open .select2-dropdown.home-select2 .select2-search--dropdown .select2-search__field {
-  border: 1px solid #fff;
-}
-.select2-container--default.select2-container--open .select2-dropdown.home-select2 .select2-results__options li,
-.select2-container--default.select2-container--open .select2-dropdown.home-select2 .select2-results__options .select2-results__option--highlighted[aria-selected] {
-  background-color: #262626;
-  font-size: 18px;
-  color: #fff;
-}
-.select2-container--default.select2-container--open .select2-dropdown.home-select2 .select2-results__options .select2-results__option[aria-selected="true"] {
-  background-color: #262626;
-}
-.select2-container--default.select2-container--open .select2-dropdown .select2-search--dropdown .select2-search__field {
-  border: 1px solid #515252;
-}
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options li,
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options .select2-results__option--highlighted[aria-selected] {
-  font-size: 14px;
-  color: #515252;
-}
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options li:hover,
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options .select2-results__option--highlighted[aria-selected]:hover {
-  color: #02b691 !important;
-}
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options .select2-results__option[aria-selected="true"] {
-  background-color: #515252;
-}
-.select2-container--default.select2-container--open .select2-dropdown .select2-results__options .select2-results__option--highlighted[aria-selected] {
-  color: #02b691 !important;
-}
-.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow:after {
-  content: "\f106";
-}
-.select2-container--default .select2-selection--single {
-  background-color: transparent;
-  border: 1px solid #e9e9e7;
-  height: 30px;
-}
-.select2-container--default .select2-selection--single.home-select2 {
-  border: 1px solid #fff;
-  border-radius: 6px;
-  height: 44px;
-}
-.select2-container--default .select2-selection--single.home-select2 .select2-selection__rendered {
-  color: #fff;
-  font-size: 18px;
-  line-height: 42px;
-  padding: 0 42px 0 15px;
-}
-.select2-container--default .select2-selection--single.home-select2 .select2-selection__arrow {
-  right: 10px;
-  top: -7px;
-}
-.select2-container--default .select2-selection--single.home-select2 .select2-selection__arrow:after {
-  font-size: 40px;
-}
-.select2-container--default .select2-selection--single .select2-selection__rendered {
-  color: #fff;
-  font-size: 14px;
-  line-height: 26px;
-  padding: 0 30px 0 10px;
-}
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-  height: auto;
-  right: 5px;
-  top: -2px;
-  width: auto;
-}
-.select2-container--default .select2-selection--single .select2-selection__arrow:after {
-  content: "\f107";
-  font-family: FontAwesome;
-  font-size: 24px;
-}
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-  display: none;
-}
 /* ---------------------------------------
     PAGINATION
 ----------------------------------------- */
@@ -7530,6 +7444,7 @@ body {
 }
 .content-wrapper .main-content .section4 .box .box-content {
   border: 1px solid #ddd;
+  min-height: 436px;
 }
 .content-wrapper .main-content .section4 .box .box-content .list-item {
   text-align: left;
@@ -7562,6 +7477,175 @@ body {
 }
 .content-wrapper .main-content .section4 .box .box-content .img-banner img {
   width: 100%;
+}
+.content-wrapper .right-content {
+  padding-right: 0;
+}
+.content-wrapper .right-content .box-inform .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper .right-content .box-inform .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper .right-content .box-inform .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper .right-content .box-inform .box .box-content {
+  height: 353px;
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item {
+  text-align: left;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item ul li {
+  padding: 10px 0;
+  border-bottom: 1px dotted #ccc;
+  display: block;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item ul li:last-child {
+  border: none;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item ul li a {
+  color: #515151;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item ul li a:hover {
+  color: red;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item ul li .fa {
+  color: red;
+  padding-right: 10px;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item .read-more {
+  text-align: right;
+  padding-right: 10px;
+}
+.content-wrapper .right-content .box-inform .box .box-content .list-item .read-more a {
+  color: red;
+  font-weight: 600;
+}
+.content-wrapper .right-content .box-video {
+  padding-top: 10px;
+}
+.content-wrapper .right-content .box-video .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper .right-content .box-video .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper .right-content .box-video .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper .right-content .box-video .box .box-content {
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.content-wrapper .right-content .box-video .box .box-content .video-content {
+  height: 200px;
+  width: 100%;
+}
+.content-wrapper .right-content .box-video .box .box-content .thumb-list ul li {
+  display: inline-block;
+  margin-right: 6px;
+}
+.content-wrapper .right-content .box-video .box .box-content .thumb-list ul li:last-child {
+  margin-right: 0;
+}
+.content-wrapper .right-content .box-video .box .box-content .thumb-list ul li .img-thumb {
+  width: 50px;
+  height: 37px;
+}
+.content-wrapper .right-content .hcm-banner,
+.content-wrapper .right-content .pccc-banner {
+  padding-top: 10px;
+}
+.content-wrapper .right-content .hcm-banner img,
+.content-wrapper .right-content .pccc-banner img {
+  width: 100%;
+}
+.content-wrapper .right-content .hot-line {
+  color: #ffea00;
+  font-weight: 700;
+  font-style: italic;
+  background: #dd0000;
+  margin-top: 10px;
+  border-radius: 4px;
+}
+.content-wrapper .right-content .hot-line .tile {
+  padding-top: 10px;
+}
+.content-wrapper .right-content .hot-line .number {
+  font-size: 35px;
+  line-height: 44px;
+  margin-bottom: 0;
+}
+.content-wrapper .right-content .box-link-site {
+  padding-top: 10px;
+}
+.content-wrapper .right-content .box-link-site .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper .right-content .box-link-site .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper .right-content .box-link-site .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper .right-content .box-link-site .box .box-content {
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.content-wrapper .right-content .box-link-site .box .box-content .select2-container--default .select2-selection--single {
+  border-radius: 0 !important;
+}
+.content-wrapper .right-content .box-count-viewer {
+  padding-top: 10px;
+}
+.content-wrapper .right-content .box-count-viewer .box {
+  border: none;
+  margin-bottom: 0;
+}
+.content-wrapper .right-content .box-count-viewer .box .panel-heading {
+  border: none;
+  background-color: #dd0000;
+  height: 38px;
+}
+.content-wrapper .right-content .box-count-viewer .box .panel-heading .box-header {
+  color: #fff;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+}
+.content-wrapper .right-content .box-count-viewer .box .box-content {
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.content-wrapper .right-content .box-count-viewer .box .box-content .title {
+  color: #058041;
+}
+.content-wrapper .right-content .box-count-viewer .box .box-content .count-viewer {
+  padding: 10px;
+}
+.content-wrapper .right-content .box-count-viewer .box .box-content .number strong {
+  font-size: 24px;
 }
 /* ---------------------------------------
     MAIN FOOTER
